--- a/src/main/resources/templates/calendar.html
+++ b/src/main/resources/templates/calendar.html
@@ -4,20 +4,22 @@
     <meta charset="UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <link rel="stylesheet" th:href="@{/lib/fontawesome/css/fontawesome.css}"/>
     <link rel="stylesheet" th:href="@{/lib/bootstrap/bootstrap.min.css}"/>
-    <link rel="stylesheet" th:href="@{/lib/docs/docs.min.css}"/>
+    <link rel="stylesheet" th:href="@{/css/docs.min.css}"/>
     <link rel="stylesheet" th:href="@{/lib/fullcalendar/fullcalendar.min.css}"/>
     <link rel="stylesheet" th:href="@{/lib/fullcalendar/fullcalendar.print.min.css}" media='print'/>
     <link rel="icon" th:href="@{/img/favicon.ico}"/>
     <script th:src="@{/js/html5shiv.min.js}"></script>
     <script th:src="@{/js/respond.min.js}"></script>
 
-    <title>日程</title>
+    <title>课程表</title>
 </head>
 
 <body>
 
-<header class="navbar navbar-static-top bs-docs-nav" id="top" role="banner">
+<header class="navbar navbar-static-top bs-docs-nav" id="top"
+        role="banner">
     <div class="container">
         <div class="navbar-header">
             <button class="navbar-toggle collapsed" type="button"
@@ -25,14 +27,14 @@
                 <span class="icon-bar"></span> <span class="icon-bar"></span> <span
                     class="icon-bar"></span>
             </button>
-            <a href="index" class="navbar-brand">啦啦啦啦</a>
+            <a href="index" class="navbar-brand">尚艺音悦</a>
         </div>
         <nav class="collapse navbar-collapse bs-navbar-collapse">
             <ul class="nav navbar-nav">
                 <li><a th:href="index">首页</a></li>
-                <li><a href="user">用户管理</a></li>
-                <li><a href="#">啦啦啦啦</a></li>
-                <li><a href="#">啦啦啦啦</a></li>
+                <li><a href="user">学校环境</a></li>
+                <li><a href="#">教师风采</a></li>
+                <li><a href="#">优秀学员</a></li>
                 <li><a href="#">关于我们</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
@@ -44,10 +46,26 @@
     </div>
 </header>
 
+<div class="bs-docs-header" id="content" tabindex="-1">
+    <div class="container">
+        <h1>课程表</h1>
+        <p>教师查询授课表，学生查询上课表</p>
+    </div>
+</div>
+
 <div class="container">
+
     <div class="row">
         <div class="col-md-12">
             <div id='calendar'></div>
+        </div>
+    </div>
+    <br/>
+    <div class="row">
+        <div class="col-md-12 text-right">
+            <button class="btn btn-success" type="button" id="add">添加预约</button>
+            <!--<button class="btn btn-default" type="info">修改预约</button>-->
+            <!--<button class="btn btn-danger" type="submit">删除预约</button>-->
         </div>
     </div>
 </div>
@@ -66,10 +84,10 @@
     </div>
 </div>
 
+<script th:src="@{/lib/fullcalendar/moment.min.js}"></script>
 <script th:src="@{/lib/jquery/jquery.min.js}"></script>
 <script th:src="@{/lib/bootstrap/bootstrap.min.js}"></script>
-<script th:src="@{/lib/docs/docs.min.js}"></script>
-<script th:src="@{/lib/fullcalendar/moment.min.js}"></script>
+<script th:src="@{/lib/bootstrap/popper.min.js}"></script>
 <script th:src="@{/lib/fullcalendar/fullcalendar.min.js}"></script>
 <script th:src="@{/lib/fullcalendar/zh-cn.js}"></script>
 <script th:src="@{/js/calendar.js}"></script>
