--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -25,14 +25,14 @@
                 <span class="icon-bar"></span> <span class="icon-bar"></span> <span
                     class="icon-bar"></span>
             </button>
-            <a href="index" class="navbar-brand">啦啦啦啦</a>
+            <a href="index" class="navbar-brand">Music</a>
         </div>
         <nav class="collapse navbar-collapse bs-navbar-collapse">
             <ul class="nav navbar-nav">
                 <li><a th:href="index">首页</a></li>
-                <li><a href="user">用户管理</a></li>
-                <li><a href="#">啦啦啦啦</a></li>
-                <li><a href="#">啦啦啦啦</a></li>
+                <li><a href="user">学校环境</a></li>
+                <li><a href="#">教师风采</a></li>
+                <li><a href="#">优秀学员</a></li>
                 <li><a href="#">关于我们</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
@@ -47,12 +47,11 @@
 <div class="bs-docs-masthead" id="content" role="main" tabindex="-1">
     <div class="container">
         <span class="bs-docs-booticon bs-docs-booticon-lg bs-docs-booticon-outline">♫</span>
-        <p class="lead">2017年10月18日上午9:00，中国共产党第十九次全国代表大会在人民大会堂开幕。习近平代表第十八届中央委员会向大会作了题为《决胜全面建成小康社会
-            夺取新时代中国特色社会主义伟大胜利》的报告。</p>
+        <p class="lead">Music 是一所综合的艺术教育教学培训机构,投入大量资金与时间汇聚国内行业顶尖人才,带来最为科学,最为完善,最为现代化的系统化教学。</p>
         <p class="lead">
-            <a href="#" class="btn btn-outline-inverse btn-lg">预约啦啦</a>
+            <a href="calendar" class="btn btn-outline-inverse btn-lg">预约上课</a>
         </p>
-        <p class="version">当前时间：2017-07-22</p>
+        <p class="version">当前时间：2018-04-26</p>
     </div>
 </div>
 
